--- a/src/_common/components/Fault/Fault.css
+++ b/src/_common/components/Fault/Fault.css
@@ -21,7 +21,7 @@
   margin: 0 0 var(--pd-16);
   font-family: var(--font-header);
   font-size: var(--text-28);
-  line-height: var(--line-36);
+  line-height: 1.3;
   letter-spacing: var(--ls-small);
 }
 
