--- a/src/accounting/pages/ChartOfAccounts/ChartOfAccounts.css
+++ b/src/accounting/pages/ChartOfAccounts/ChartOfAccounts.css
@@ -3,14 +3,13 @@
   font-family: var(--font-header);
   font-size: var(--text-20);
   font-weight: var(--font-400);
-  line-height: var(--line-28);
 }
 
 .description {
   margin: 0;
   color: var(--tw-gray-60);
   font-size: var(--text-12);
-  line-height: var(--line-16);
+  line-height: 1.33;
 }
 
 .header {
