--- a/src/app/components/SpendingByWidget/components/Merchant.css
+++ b/src/app/components/SpendingByWidget/components/Merchant.css
@@ -5,7 +5,7 @@
   align-items: center;
   grid-gap: var(--pd-10);
   font-size: var(--text-12);
-  line-height: var(--line-16);
+  line-height: 1.33;
 }
 
 .amount {
