--- a/src/signup/components/VerifyForm/VerifyForm.css
+++ b/src/signup/components/VerifyForm/VerifyForm.css
@@ -1,6 +1,6 @@
 .note {
   margin-bottom: var(--pd-8);
   font-size: var(--text-12);
-  line-height: var(--line-16);
+  line-height: 1.33;
   text-align: center;
 }
