--- a/src/_common/components/Drawer/Drawer.css
+++ b/src/_common/components/Drawer/Drawer.css
@@ -86,7 +86,7 @@
   font-family: var(--font-header);
   font-size: var(--text-16);
   font-weight: var(--font-400);
-  line-height: var(--line-24);
+  line-height: 1.33;
 }
 
 .content {
