--- a/src/allocations/components/ManageBalanceSuccess/ManageBalanceSuccess.css
+++ b/src/allocations/components/ManageBalanceSuccess/ManageBalanceSuccess.css
@@ -6,7 +6,6 @@
   margin: 0 0 var(--pd-8);
   font: inherit;
   font-size: var(--text-20);
-  line-height: var(--line-28);
 }
 
 .text {
@@ -19,7 +18,7 @@
   margin: var(--pd-24) 0 var(--pd-8);
   font: inherit;
   font-size: var(--text-12);
-  line-height: var(--line-16);
+  line-height: 1.33;
   letter-spacing: var(--ls-2);
   text-transform: uppercase;
 }
