--- a/src/app/components/Section/Section.css
+++ b/src/app/components/Section/Section.css
@@ -26,19 +26,17 @@
   font-family: var(--font-header);
   font-size: var(--text-20);
   font-weight: var(--font-400);
-  line-height: var(--line-28);
 }
 
 .description {
   margin: 0;
   color: var(--tw-gray-60);
   font-size: var(--text-12);
-  line-height: var(--line-16);
+  line-height: 1.33;
 }
 
 .content {
   font-size: var(--text-14);
-  line-height: var(--line-20);
 
   @media (--bp-large) {
     margin-left: var(--pd-48);
