--- a/src/cards/components/CardInfo/CardInfo.css
+++ b/src/cards/components/CardInfo/CardInfo.css
@@ -18,7 +18,7 @@
   margin: 0;
   font: inherit;
   font-size: var(--text-12);
-  line-height: var(--line-16);
+  line-height: 1.33;
   letter-spacing: var(--ls-2);
   text-transform: uppercase;
 }
@@ -28,7 +28,6 @@
   margin-top: var(--pd-16);
   align-items: center;
   font-size: var(--text-20);
-  line-height: var(--line-28);
 }
 
 .name {
