--- a/src/cards/components/CardsList/CardsList.css
+++ b/src/cards/components/CardsList/CardsList.css
@@ -12,7 +12,7 @@
   grid-template-columns: auto 1fr auto;
   grid-gap: var(--pd-10);
   font-size: var(--text-12);
-  line-height: var(--line-16);
+  line-height: 1.33;
   cursor: pointer;
 
   &:not(:last-child) {
