--- a/src/company/components/AccountItem/AccountItem.css
+++ b/src/company/components/AccountItem/AccountItem.css
@@ -12,13 +12,13 @@
 
 .card-name {
   font-size: var(--text-20);
-  line-height: var(--line-24);
+  line-height: 1.2;
 }
 
 .card-number {
   margin-top: var(--pd-4);
   font-size: var(--text-12);
-  line-height: var(--line-16);
+  line-height: 1.33;
 }
 
 .info {
