--- a/src/signup/components/Description/Description.css
+++ b/src/signup/components/Description/Description.css
@@ -2,7 +2,7 @@
   max-width: 625px;
   margin: 0 0 var(--pd-24);
   font-size: var(--text-24);
-  line-height: var(--line-36);
+  line-height: 1.33;
 }
 
 .small {
