Cleaned up TODOs

--- a/src/company/components/AccountItem/AccountItem.css
+++ b/src/company/components/AccountItem/AccountItem.css
@@ -21,7 +21,7 @@
   line-height: 1.33;
 }
 
-.info {
+/* .info {
   margin: var(--pd-8) 0;
 }
 
@@ -31,4 +31,4 @@
 
 .unlink {
   margin-top: var(--pd-24);
-}
+} */
