Improved selected address styling, updated Activate Card icon

--- a/src/employees/components/AddressSelect/AddressSelect.css
+++ b/src/employees/components/AddressSelect/AddressSelect.css
@@ -22,7 +22,8 @@
   }
 
   @nest .item > input:checked + & {
-    border-color: var(--tw-primary-border);
+    background-color: #ecfdf5;
+    border-color: #10b981;
   }
 }
 
