[CAP-703] [CAP-701] [CAP-644] Desc field, Log in Btn, Sign up btn, 2nd Email exists err catch
* 703 701 644 and misc


Approved-by: Stephen (Stevo) Saucier

--- a/src/index.css
+++ b/src/index.css
@@ -23,6 +23,7 @@
   --tw-accent-70: #3b885f;
   --tw-accent-60: #40a067;
   --tw-accent-50: #44b96d;
+  --tw-accent-45: #5bea83;
   --tw-accent-40: #45d572;
   --tw-accent-30: #44f075;
   --tw-accent-20: #b4f7b9;
