--- a/src/app/components/SpendingByWidget/SpendingByWidget.css
+++ b/src/app/components/SpendingByWidget/SpendingByWidget.css
@@ -1,6 +1,7 @@
 .top-card-wrapper {
   display: flex;
   width: 100%;
+  margin-bottom: 20px;
   padding-bottom: 3px;
   flex-direction: row;
   flex-wrap: nowrap;
