--- a/src/cards/components/CardInfo/CardInfo.css
+++ b/src/cards/components/CardInfo/CardInfo.css
@@ -27,7 +27,9 @@
   display: flex;
   margin-top: var(--pd-16);
   align-items: center;
+  color: inherit;
   font-size: var(--text-20);
+  text-decoration: none;
 }
 
 .name {
