--- a/src/transactions/containers/TransactionPreview/TransactionPreview.css
+++ b/src/transactions/containers/TransactionPreview/TransactionPreview.css
@@ -10,7 +10,7 @@
 
 .summary {
   display: flex;
-  margin: 0 var(--pd-24) var(--pd-24);
+  margin: 0 0 var(--pd-24);
   padding: var(--pd-24) 0;
   align-items: center;
   flex-direction: column;
